# msr-event-hub

./: .env.example  .gitignore  DETERMINISTIC_INTENTS_EXAMPLES.md  DOSA_COMPLIANCE.md  README.md  ROUTING_QUALITY_IMPLEMENTATION.md  STAGING_VALIDATION.md  __init__.py  core_interfaces.py  example_startup.py  examples.py  knowledge_agent.json  m365_examples.py  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  quick_test.py  start-all.ps1  start-server.ps1  start.ps1  start.sh  test-stream.ps1  test_stream.py  test_welcome.py  tsconfig.base.json  validate_card.py  validate_imports.py
.data/: mock_event_data.backup.20260113_100830.json  mock_event_data.backup.20260113_101719.json
.github/: COPILOT_INSTRUCTIONS_UPDATED.md  INSTRUCTIONS_UPDATE_SUMMARY.md
agents/: base_agent.py  repository_agent.py
api/: action_init.py  caching.py  card_renderer.py  chat_routes.py  chat_routes_backup.py  conversation_context.py  mock_data_loader.py  query_router.py  router_config.py  router_prompt.py
config/: key_vault.py  settings.py
docs/: APPLICATION_INSIGHTS_ROUTING_DASHBOARD.md  ROUTING_QUALITY_IMPROVEMENT_GUIDE.md
documentation/: EVENT_SCHEMA.md  QUERY_ROUTING_CONFIG.md
examples/: README.md  refactor_examples.py
integrations/: foundry_integration.py  m365_adapters.py  power_platform_connector.py
prompts/: repository_prompts.py  talk_prompts.py
scripts/: card_lint.mjs  deploy-backend.sh  example_startup.py  import_rrs_csv.py  knowledge_agent.py  knowledge_agent_bot.py  poc_runner.py  start-all.ps1  start.ps1  start.sh  validate_card.py  verify_tier3_tier4.py
src/: __init__.py
tests/: Untitled-1.csv  conftest.py  test_actions.py  (+22 more)
(+208 files in other folders)
